--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <title>Criando uma aventura</title>
 </head>
 
@@ -18,11 +24,11 @@
         <button class="btn-proximo" data-proximo="1">pernambuco</button>
     </div>
 
-    <div class="passo" id="passo-0">
-        <p>Um dia desses, dentro de um livro da biblioteca da escola, eu descobri uma carta antiga sobre uma cidade perdida, escondida por riquezas e belezas naturais. Nessa carta, a autora deixa algumas pistas para encontrar essa cidade e eu decidi segui-las
-        </p>
-        <button class="btn-proximo" data-proximo="1">Rio de Janeiro</button>
-        <button class="btn-proximo" data-proximo="1">pernambuco</button>
+    <div class="passo" id="passo-1">
+        <p>Você começa sua jornada no Rio de Janeiro, subindo o Pico da Tijuca ao amanhecer para encontrar a primeira
+            pista.</p>
+        <button class="btn-proximo" data-proximo="1">Procurar a pista no topo do pico</button>
+        <button class="btn-proximo" data-proximo="1">desistir e voltar para a casa</button>
     </div>
 </body>
 
