--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Criando uma aventura</title>
+    <title>Em busca da cidade perdida</title>
 </head>
 
 <body>
@@ -21,15 +21,15 @@
                 encontrar essa cidade e eu decidi segui-las
             </p>
             <button class="btn-proximo" data-proximo="1">Rio de Janeiro</button>
-            <button class="btn-proximo" data-proximo="1">Pernambuco</button>
+            <button class="btn-proximo" data-proximo="2">Pernambuco</button>
         </div>
 
         <div class="passo" id="passo-1">
             <p>Você começa sua jornada no Rio de Janeiro, subindo o Pico da Tijuca ao amanhecer para encontrar a
                 primeira
                 pista.</p>
-            <button class="btn-proximo" data-proximo="1">Procurar a pista no topo do pico</button>
-            <button class="btn-proximo" data-proximo="1">Desistir e voltar para a casa</button>
+            <button class="btn-proximo" data-proximo="3">Procurar a pista no topo do pico</button>
+            <button class="btn-proximo" data-proximo="4">Desistir e voltar para a casa</button>
         </div>
     </main>
     <script src="script.js"></script>
